--- a/LearnCppProject/LearnCppProject.vcxproj
+++ b/LearnCppProject/LearnCppProject.vcxproj
@@ -148,11 +148,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="FriendClassAndInheritance.h" />
     <ClInclude Include="FunctionTemplates.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FriendClassAndInheritance.cpp" />
     <ClCompile Include="FunctionTemplates.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
